force-app/main/default/objects/Sales_Meeting_Tracker__c/Sales_Meeting_Tracker__c.object-meta.xml
<CustomObject>
    <label>Broker Meeting Tracker (Sales)</label>
    <nameField>
        <displayFormat>SBM-{0000}</displayFormat>
        <label>Sales Meeting Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Meeting Tracker (Sales)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>