force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Broker_category__c.field-meta.xml
<CustomField>
    <fullName>Broker_category__c</fullName>
    <label>Broker category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>