force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Brokerage_company_owner_s_name__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_company_owner_s_name__c</fullName>
    <label>Brokerage company owner&apos;s name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>