force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP ID</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipName>Sales_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>