force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/CP_OR_CS_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_OR_CS_Id__c</fullName>
    <formula>BLANKVALUE( CP_ID__r.Channel_Partner_Id__c ,  SC_ID__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP OR CS Id</label>
    <type>Text</type>
</CustomField>