force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/CP_OR_CS_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_OR_CS_Name__c</fullName>
    <formula>BLANKVALUE( CP_ID__r.Name ,  SC_ID__r.Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP OR CS Name</label>
    <type>Text</type>
</CustomField>