force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Meeting_category__c.field-meta.xml
<CustomField>
    <fullName>Meeting_category__c</fullName>
    <formula>If( OR(IsPickVal(Meeting_Location__c,&apos;Hartland&apos;) ,IsPickVal(Meeting_Location__c,&apos;Zoom Meeting&apos;)),&apos;Inbound Meeting&apos;,&apos;Outbound Meeting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting category</label>
    <type>Text</type>
</CustomField>