force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Meeting_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Remarks__c</fullName>
    <label>Meeting Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>