force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Plan_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Meeting__c</fullName>
    <label>Plan of Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introductory meeting</fullName>
            </value>
            <value>
                <fullName>Client meeting in broker office</fullName>
            </value>
            <value>
                <fullName>Meeting new agent</fullName>
            </value>
            <value>
                <fullName>General meeting.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>