force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter Full Name as per Passport</inlineHelpText>
    <label>SC ID</label>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>Broker Meeting Tracker (Sales)</relationshipLabel>
    <relationshipName>Sales_Meeting_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>