force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Select_Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Select_Meeting_Location__c</fullName>
    <label>Select Meeting Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hartland</fullName>
            </value>
            <value>
                <fullName>Zoom Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>