force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Senior_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Senior_Vice_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Vice President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Meeting_Tracker4</relationshipName>
    <type>Lookup</type>
</CustomField>