force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/Vice_president__c.field-meta.xml
<CustomField>
    <fullName>Vice_president__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vice president</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Meeting_Tracker5</relationshipName>
    <type>Lookup</type>
</CustomField>