force-app/main/default/objects/Sales_Meeting_Tracker__c/fields/VP_Name__c.field-meta.xml
<CustomField>
    <fullName>VP_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Meeting_Tracker3</relationshipName>
    <type>Lookup</type>
</CustomField>