force-app/main/default/objects/Sales_Meeting_Tracker__c/validationRules/Broker_name_mandatory_on_not_reg.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_name_mandatory_on_not_reg</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Broker_category__c, &apos;Not Registered&apos;),
    ISBLANK(Broker_Name__c)
)</errorConditionFormula>
    <errorMessage>Enter Broker Name</errorMessage>
</ValidationRule>