force-app/main/default/objects/Sales_Meeting_Tracker__c/validationRules/Valiadate_CP_Id_and_SC_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Valiadate_CP_Id_and_SC_Id</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    TEXT(Broker_category__c) = &apos;Registered&apos;,
    NOT(AND(
        OR(
            ISBLANK(SC_ID__c),
            ISBLANK(CP_ID__c)
        ),
        NOT(
            AND(
                ISBLANK(SC_ID__c),
                ISBLANK(CP_ID__c)
            )
        )
    ))
)</errorConditionFormula>
    <errorMessage>Choose Either CP Id or SC Id but not both</errorMessage>
</ValidationRule>