force-app/main/default/objects/Sales_Meeting_Tracker__c/validationRules/validate_1_date_range_within_one_day.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_1_date_range_within_one_day</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
AND(
    OR(
        TODAY() - 1 = DATEVALUE( TEXT(Meeting_Date__c )  ),  
        TODAY() = DATEVALUE(TEXT(Meeting_Date__c ))    
       
    ),
    NOT(ISBLANK(Meeting_Date__c ))  
)
)</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Date can be today or yesterday only.</errorMessage>
</ValidationRule>