force-app/main/default/objects/Sales_Meeting_Tracker__c/validationRules/validate_broker_category_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_broker_category_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Broker_category__c))</errorConditionFormula>
    <errorMessage>Select Broker category</errorMessage>
</ValidationRule>