force-app/main/default/objects/Sales_Meeting_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Broker_Name__c</columns>
    <columns>Person_met__c</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Meeting_Remarks__c</columns>
    <columns>Meeting_Status__c</columns>
    <columns>SC_ID__c</columns>
    <columns>CP_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>