force-app/main/default/objects/Sales_Meeting_Tracker__c/listViews/My_Broker_Meeting_Tracker.listView-meta.xml
<ListView>
    <fullName>My_Broker_Meeting_Tracker</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Meeting_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>My Broker Meeting Tracker</label>
</ListView>